force-app/main/default/objects/Doctor_Visit__c/Doctor_Visit__c.object-meta.xml
<CustomObject>
    <label>Doctor Visit</label>
    <nameField>
        <displayFormat>VST-{000000}</displayFormat>
        <label>Visit Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Doctor Visits</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>