force-app/main/default/objects/Doctor_Visit__c/fields/Healthcare_Provider__c.field-meta.xml
<CustomField>
    <fullName>Healthcare_Provider__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Healthcare Provider</label>
    <referenceTo>Healthcare_Provider__c</referenceTo>
    <relationshipLabel>Doctor Visits</relationshipLabel>
    <relationshipName>Doctor_Visits</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>