force-app/main/default/objects/Doctor_Visit__c/fields/Medical_Representative__c.field-meta.xml
<CustomField>
    <fullName>Medical_Representative__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Medical Representative</label>
    <referenceTo>Medical_Representative__c</referenceTo>
    <relationshipLabel>Doctor Visits</relationshipLabel>
    <relationshipName>Doctor_Visits</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>