force-app/main/default/objects/Doctor_Visit__c/fields/Outcome__c.field-meta.xml
<CustomField>
    <fullName>Outcome__c</fullName>
    <label>Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Highly Positive</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Hesitant</fullName>
            </value>
            <value>
                <fullName>Objections Raised</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>